--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -1,23 +1,86 @@
 .container-button {
+  width: 480px;
+  height: 320px;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../img/overlay.jpg);
+    url("../../img/Mobile/optimision/Header\ img.png");
+  background-size: cover;
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) {
+  .container-button {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../../img/Mobile/optimision/Header\ img2x.png");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-button {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../../img/Tablet/optimisio/Header\ img.png");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../../img/Tablet/optimisio/Header\ img@2x.png");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../../img/Desktop/optimision/Img-header.png");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+  screen and (min-resolution: 192dpi) and (min-width: 1200px),
+  screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../../img/Desktop/optimision/Img-header@2x.png");
+  }
+}
+
+.container-button {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   padding: 200px 0;
   text-align: center;
-  max-width: 1600px;
-  min-height: 600px;
+  // max-width: 1600px;
+  // min-height: 600px;
   margin: 0 auto;
+  margin-bottom: 60px;
 }
 .container-button h1 {
   display: block;
   margin-bottom: 30px;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
