--- a/sass/components/_logo-studio.scss
+++ b/sass/components/_logo-studio.scss
@@ -5,9 +5,9 @@
   color: var(--color-focus);
 }
 .box-nav .logo-link {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 93px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  //margin-right: 93px;
 }
 
 .studio {
