--- a/sass/layaut/_list-features.scss
+++ b/sass/layaut/_list-features.scss
@@ -1,12 +1,16 @@
 .list-features-svg {
   display: flex;
+  flex-wrap: wrap;
+}
+.list-features {
+  flex-direction: column;
 }
 .list-features:not(:last-child) {
   margin-right: 30px;
 }
 .features-icon {
   @extend %align;
-  width: 270px;
+  width: 450px;
   height: 120px;
   background: #f5f4fa;
   margin-bottom: 30px;
