--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,34 @@ body {
 }
 
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+  width: 100%;
+  padding: 0 15px;
+  outline: 1px solid red;
+}
+
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 448px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 720px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 :root {
@@ -60,7 +84,7 @@ body {
   display: none;
 }
 
-.social-list-link, .list-contakty .link-main, .features-icon, .link-customers {
+.social-list-link, .features-icon, .link-customers {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,9 +106,8 @@ body {
 }
 
 .box-nav .logo-link {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 93px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .studio {
@@ -164,22 +187,56 @@ body {
 }
 
 .container-button {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/overlay.jpg);
+  width: 480px;
+  height: 320px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Mobile/optimision/Header img.png");
+  background-size: cover;
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), screen and (min-resolution: 192dpi) and (min-width: 320px), screen and (min-resolution: 2dppx) and (min-width: 320px) {
+  .container-button {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Mobile/optimision/Header img2x.png");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-button {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Tablet/optimisio/Header img.png");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Tablet/optimisio/Header img@2x.png");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Desktop/optimision/Img-header.png");
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Desktop/optimision/Img-header@2x.png");
+  }
+}
+
+.container-button {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   padding: 200px 0;
   text-align: center;
-  max-width: 1600px;
-  min-height: 600px;
   margin: 0 auto;
 }
 
 .container-button h1 {
   display: block;
   margin-bottom: 30px;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -234,130 +291,28 @@ body {
   margin-right: 30px;
 }
 
-.box-nav {
-  display: flex;
-  align-items: center;
-  /*Вирівнювання контейнерів по центру*/
-  background: var(--color-background--container);
+.nav-btn {
+  background-color: transparent;
+  padding: 0;
+  border: transparent;
 }
 
-.link-main {
-  text-decoration: none;
-  /* Отменяем подчеркивание у ссылки */
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link-main:hover, .link-main:focus, .link-main:target {
-  color: var(--color-focus);
-}
-
-.link-main:active {
-  color: tomato;
-}
-
-.list .link-main {
-  display: block;
-  padding: 32px 0;
-}
-
-.nav-ul {
-  font-weight: 500;
-  /* Жирное начертание */
-  font-size: 14px;
-  line-height: 1.19;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-}
-
-.nav-link {
-  position: relative;
-}
-
-.nav-link::after {
-  content: "";
-  position: absolute;
-  margin: 0;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link:hover::after, .nav-link:focus::after {
-  opacity: 1;
+.nav-btn-icon {
+  width: 40px;
+  height: 40px;
 }
 
 .list {
-  display: flex;
-}
-
-.list .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.list .current {
-  color: var(--akcent-color);
-}
-
-.link-mail {
-  display: block;
-}
-
-.icon-mail {
-  fill: currentColor;
-  margin-right: 10px;
-}
-
-.icon-tel {
-  fill: currentColor;
-  margin-right: 10px;
+  display: none;
 }
 
 .list-contakty {
-  display: flex;
-  margin-left: auto;
-}
-
-.list-mail {
-  display: flex;
-  align-items: center;
-  margin-right: 50px;
-}
-
-.list-tel {
-  align-items: center;
-}
-
-.header-li a {
-  list-style-type: none;
-  background: var(--color-background--container);
-  color: var(--title-text-color);
-}
-
-.contakty a {
-  color: var(--primary-text-color);
-}
-
-.header-li {
-  list-style-type: none;
-  font-style: normal;
-}
-
-.header-nav {
-  display: flex;
-}
-
-.list-contakty .link-main {
-  padding: 40px 0;
-  height: 16px;
+  display: none;
 }
 
 .list-features-svg {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .list-features:not(:last-child) {
@@ -365,7 +320,7 @@ body {
 }
 
 .features-icon {
-  width: 270px;
+  width: 450px;
   height: 120px;
   background: #f5f4fa;
   margin-bottom: 30px;
@@ -382,10 +337,7 @@ body {
 
 .list-desc {
   display: flex;
-}
-
-.list-desc .main-li:not(:last-child) {
-  margin-right: 30px;
+  flex-wrap: wrap;
 }
 
 .title-post {
