--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -38,10 +38,34 @@ body {
 }
 
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+  width: 100%;
+  padding: 0 15px;
+  outline: 1px solid red;
+}
+
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 448px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 720px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 :root {
@@ -60,132 +84,29 @@ body {
   display: none;
 }
 
-.list-contakty .link-main, .social-list-link {
+.social-list-link {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.box-nav {
-  display: flex;
-  align-items: center;
-  /*Вирівнювання контейнерів по центру*/
-  background: var(--color-background--container);
+.nav-btn {
+  background-color: transparent;
+  padding: 0;
+  border: transparent;
 }
 
-.link-main {
-  text-decoration: none;
-  /* Отменяем подчеркивание у ссылки */
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link-main:hover, .link-main:focus, .link-main:target {
-  color: var(--color-focus);
-}
-
-.link-main:active {
-  color: tomato;
-}
-
-.list .link-main {
-  display: block;
-  padding: 32px 0;
-}
-
-.nav-ul {
-  font-weight: 500;
-  /* Жирное начертание */
-  font-size: 14px;
-  line-height: 1.19;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-}
-
-.nav-link {
-  position: relative;
-}
-
-.nav-link::after {
-  content: "";
-  position: absolute;
-  margin: 0;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link:hover::after, .nav-link:focus::after {
-  opacity: 1;
+.nav-btn-icon {
+  width: 40px;
+  height: 40px;
 }
 
 .list {
-  display: flex;
-}
-
-.list .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.list .current {
-  color: var(--akcent-color);
-}
-
-.link-mail {
-  display: block;
-}
-
-.icon-mail {
-  fill: currentColor;
-  margin-right: 10px;
-}
-
-.icon-tel {
-  fill: currentColor;
-  margin-right: 10px;
+  display: none;
 }
 
 .list-contakty {
-  display: flex;
-  margin-left: auto;
-}
-
-.list-mail {
-  display: flex;
-  align-items: center;
-  margin-right: 50px;
-}
-
-.list-tel {
-  align-items: center;
-}
-
-.header-li a {
-  list-style-type: none;
-  background: var(--color-background--container);
-  color: var(--title-text-color);
-}
-
-.contakty a {
-  color: var(--primary-text-color);
-}
-
-.header-li {
-  list-style-type: none;
-  font-style: normal;
-}
-
-.header-nav {
-  display: flex;
-}
-
-.list-contakty .link-main {
-  padding: 40px 0;
-  height: 16px;
+  display: none;
 }
 
 .dark {
@@ -506,9 +427,14 @@ button.current {
   font-weight: 700;
   font-size: inherit;
   line-height: 1.143;
+  text-align: center;
   margin-bottom: 10px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+.caption {
+  text-align: center;
 }
 
 .logo-link {
@@ -521,9 +447,8 @@ button.current {
 }
 
 .box-nav .logo-link {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 93px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .studio {
