--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,6 +1,27 @@
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+  width: 100%;
+  padding: 0 15px;
+  outline: 1px solid red;
+
+  .header & {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+@media screen and(min-width: 480px) {
+  .container {
+    width: 448px;
+    margin: 0 auto;
+  }
+}
+@media screen and(min-width:768px) {
+  .container {
+    width: 720px;
+  }
+}
+@media screen and(min-width:1200px) {
+  .container {
+    width: 1200px;
+  }
 }
