--- a/sass/components/_main-li.scss
+++ b/sass/components/_main-li.scss
@@ -4,8 +4,12 @@
 
   .caption {
     @include font($fw: 700, $fs: inherit, $lh: 1.143);
+    text-align: center;
     margin-bottom: 10px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
   }
+}
+.caption{
+  text-align: center;
 }
