--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 @import "./utils/variables";
 @import "./utils/visually-hidden";
 @import "./utils/placehlder";
-@import './utils/mixin';
+@import "./utils/mixin";
 
 //COMPONENTS
 @import "./components/logo-studio";
@@ -18,6 +18,7 @@
 @import "./components/container-button";
 
 //LAYOUT
+
 @import "./layaut/aside";
 @import "./layaut/header";
 @import "./layaut/list-features";
