--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@
 @import "./layaut/aside";
 @import "./layaut/header";
 @import "./layaut/list-features";
-@import "./layaut/list-desc";
+//@import "./layaut/list-desc";
 @import "./layaut/doing-section";
 @import "./layaut/our-team";
 @import "./layaut/customers-section";
