--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ body {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 448px;
+    width: 480px;
     margin: 0 auto;
   }
 }
@@ -84,9 +84,7 @@ body {
   display: none;
 }
 
-.social-list-link,
-.features-icon,
-.link-customers {
+.social-list-link, .features-icon, .link-customers {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,13 +122,14 @@ body {
 .main-li {
   list-style-type: none;
   font-style: normal;
+  margin-bottom: 30px;
 }
 
 .main-li .caption {
+  text-align: center;
   font-weight: 700;
-  font-size: inherit;
-  line-height: 1.143;
-  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
@@ -177,12 +176,10 @@ body {
   height: 100%;
   /* background-color: var(--akcent-background);*/
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover,
-.social-list-link:focus {
+.social-list-link:hover, .social-list-link:focus {
   background-color: var(--color-focus);
 }
 
@@ -193,67 +190,37 @@ body {
 .container-button {
   width: 480px;
   height: 320px;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../../img/Mobile/optimision/Header img.png");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Mobile/optimision/Header img.png");
   background-size: cover;
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
-  screen and (min-resolution: 192dpi) and (min-width: 320px),
-  screen and (min-resolution: 2dppx) and (min-width: 320px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), screen and (min-resolution: 192dpi) and (min-width: 320px), screen and (min-resolution: 2dppx) and (min-width: 320px) {
   .container-button {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../../img/Mobile/optimision/Header img2x.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Mobile/optimision/Header img2x.png");
   }
 }
 
 @media screen and (min-width: 768px) {
   .container-button {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../../img/Tablet/optimisio/Header img.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Tablet/optimisio/Header img.png");
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-  screen and (min-resolution: 192dpi) and (min-width: 768px),
-  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../../img/Tablet/optimisio/Header img@2x.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Tablet/optimisio/Header img@2x.png");
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../../img/Desktop/optimision/Img-header.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Desktop/optimision/Img-header.png");
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
-  screen and (min-resolution: 192dpi) and (min-width: 1200px),
-  screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../../img/Desktop/optimision/Img-header@2x.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Desktop/optimision/Img-header@2x.png");
   }
 }
 
@@ -264,6 +231,7 @@ body {
   padding: 200px 0;
   text-align: center;
   margin: 0 auto;
+  margin-bottom: 60px;
 }
 
 .container-button h1 {
@@ -299,7 +267,8 @@ body {
 
 .aside {
   background: #f5f4fa;
-  padding: 94px 0;
+  padding: 60px 0;
+  margin-bottom: 60px;
 }
 
 .aside h2 {
@@ -313,12 +282,12 @@ body {
 
 .container-item {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .container-item .main-li {
   background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -345,13 +314,8 @@ body {
   display: none;
 }
 
-.list-features-svg {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.list-features:not(:last-child) {
-  margin-right: 30px;
+.list-features {
+  flex-direction: column;
 }
 
 .features-icon {
@@ -367,12 +331,7 @@ body {
 }
 
 .features {
-  padding: 94px 0;
-}
-
-.list-desc {
-  display: flex;
-  flex-wrap: wrap;
+  padding: 0;
 }
 
 .title-post {
@@ -386,6 +345,7 @@ body {
 }
 
 .doing-section {
+  display: none;
   padding-top: 0;
   padding-bottom: 94px;
 }
@@ -450,30 +410,25 @@ body {
   text-align: center;
 }
 
-.customers-section {
-  padding: 94px 0;
-}
-
 .customers-title {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
 .list-customers {
   display: flex;
-}
-
-.customers:not(:last-child) {
-  margin-right: 30px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .customers {
-  width: 170px;
   height: 90px;
+  width: 210px;
+  margin-bottom: 30px;
 }
 
 .logo-1 {
@@ -515,16 +470,13 @@ body {
 .link-customers {
   width: 100%;
   height: 100%;
-  border: 1px solid #afb1b8;
+  border: 1px solid #AFB1B8;
   border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-customers .icon-customers {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-customers:hover .icon-customers,
@@ -533,8 +485,7 @@ body {
   border-color: var(--color-focus);
 }
 
-.link-customers:hover,
-.link-customers:focus {
+.link-customers:hover, .link-customers:focus {
   border-color: var(--color-focus);
 }
 
@@ -713,8 +664,7 @@ body {
   min-height: 581px;
   padding: 40px 40px;
   background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -768,8 +718,7 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.contact-form-input:focus,
-.contact-form-input:hover {
+.contact-form-input:focus, .contact-form-input:hover {
   outline: transparent;
   border: 1px solid #2196f3;
 }
@@ -880,8 +829,7 @@ body {
   width: 16px;
   height: 15px;
   display: inline-block;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border-color: #212121;
   border: 2px solid #212121;
@@ -902,8 +850,7 @@ body {
   cursor: pointer;
 }
 
-.modal-submit:hover,
-.modal-submit:focus {
+.modal-submit:hover, .modal-submit:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
