--- a/sass/components/_main-li.scss
+++ b/sass/components/_main-li.scss
@@ -1,12 +1,12 @@
 .main-li {
   list-style-type: none;
   font-style: normal;
-  text-align: center;
+  margin-bottom: 30px;
 
   .caption {
     text-align: center;
-    @include font($fw: 700, $fs: inherit, $lh: 1.143);
-    margin-bottom: 10px;
+    @include font($fw: 700, $fs: 14px, $lh: 1.71);
+    // margin-bottom: 10px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
   }
