--- a/sass/layaut/_aside.scss
+++ b/sass/layaut/_aside.scss
@@ -1,6 +1,8 @@
 .aside {
   background: #f5f4fa;
-  padding: 94px 0;
+  //padding: 94px 0;
+  padding: 60px 0;
+  margin-bottom: 60px;
 }
 .aside h2 {
   @include font($fw: 700, $fs: 36px, $lh: 1.167);
@@ -10,6 +12,7 @@
 }
 .container-item {
   display: flex;
+  flex-wrap: wrap;
 
   .main-li {
     background: #ffffff;
