--- a/sass/layaut/_container-form.scss
+++ b/sass/layaut/_container-form.scss
@@ -1,8 +1,24 @@
 .container-form {
-  margin-left: 93px;
+  //margin-left: 93px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.footer-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 .box-mail {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 .form-mail {
   width: 358px;
@@ -14,10 +30,11 @@
   border-radius: 4px;
   background: #2f303a;
   color: var(--akcent-background);
+  margin-bottom: 20px;
 }
 .title-form {
   @include font($fs: 14px, $lh: 1.14);
-  display: block;
+  //display: block;
   margin-bottom: 20px;
   font-style: normal;
   letter-spacing: 0.03em;
@@ -26,7 +43,7 @@
 }
 .contact-form-btn {
   @include font();
-  margin-left: 12px;
+  //margin-left: 12px;
   padding: 10px 29px;
   width: 200px;
   height: 50px;
