--- a/sass/layaut/_customers-section.scss
+++ b/sass/layaut/_customers-section.scss
@@ -1,6 +1,6 @@
-.customers-section {
+//.customers-section {
   //padding: 94px 0;
-}
+//}
 .customers-title {
   @include font($fs: 36px, $lh: 1.16);
   //margin-bottom: 50px;
