--- a/sass/layaut/_list-features.scss
+++ b/sass/layaut/_list-features.scss
@@ -1,7 +1,7 @@
-.list-features-svg {
-  //display: flex;
-  //flex-wrap: wrap;
-}
+//.list-features-svg {
+//display: flex;
+//flex-wrap: wrap;
+//}
 .list-features {
   flex-direction: column;
 }
