--- a/sass/layaut/_container-footer.scss
+++ b/sass/layaut/_container-footer.scss
@@ -1,6 +1,14 @@
 .container-footer {
+  display: flex;
   background: #2f303a;
   padding: 60px 0;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  .social-list {
+    margin-bottom: 60px;
+  }
 }
 .footer-social:not(:last-child) {
   margin-right: 10px;
@@ -12,11 +20,11 @@
 .footer-icon {
   fill: var(--akcent-background);
 }
-.flex {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-}
+// .flex {
+//   display: flex;
+//   align-items: baseline;
+//   justify-content: space-between;
+// }
 .footer-title {
   @include font($fw: 700, $fs: 14px, $lh: 1.143);
   margin-bottom: 20px;
@@ -24,9 +32,9 @@
   text-transform: uppercase;
   color: #ffffff;
 }
-.footer-box {
-  margin-left: 70px;
-}
+// // .footer-box {
+// //   margin-left: 70px;
+// // }
 .logo-footer {
   display: block;
   padding: 0;
@@ -55,16 +63,18 @@
   color: var(--color-background--container);
 }
 .footer-address {
+  margin-bottom: 60px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 
   .text-p {
-    margin-bottom: 9px;
+    // margin-bottom: 9px;
     color: var(--color-background--container);
+    margin-bottom: 8px;
   }
 
   .link-main {
-    display: block;
+    //display: block;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
