--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,6 +22,7 @@
 @import "./layaut/aside";
 @import "./layaut/header";
 @import "./layaut/list-features";
+@import "./layaut/mobile-menu";
 //@import "./layaut/list-desc";
 @import "./layaut/doing-section";
 @import "./layaut/our-team";
