--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -18,6 +18,6 @@
 @import "./components/text-title";
 @import "./components/text-p";
 @import "./components/subtitle";
-//@import "./components/main-li";
+@import "./components/main-li";
 @import "./components/logo-studio";
 @import "./components/social-list-icon";
