--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,13 +16,13 @@
 @import "./components/social-list-icon";
 @import "./components/subtitle";
 @import "./components/container-button";
+@import "./components/\ text-decoration";
 
 //LAYOUT
-
+@import "./layaut/mobile-menu";
 @import "./layaut/aside";
 @import "./layaut/header";
 @import "./layaut/list-features";
-@import "./layaut/mobile-menu";
 //@import "./layaut/list-desc";
 @import "./layaut/doing-section";
 @import "./layaut/our-team";
