--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -21,3 +21,4 @@
 @import "./components/main-li";
 @import "./components/logo-studio";
 @import "./components/social-list-icon";
+@import "./components/\ text-decoration;
