--- a/css/main.css
+++ b/css/main.css
@@ -188,8 +188,10 @@ body {
 }
 
 .container-button {
-  width: 480px;
-  height: 320px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  height: 400px;
+  margin: 0 auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Mobile/optimision/Header img.png");
   background-size: cover;
 }
@@ -265,6 +267,155 @@ body {
   /* cursor */
 }
 
+.decor {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.mobile-close-btn {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  top: 8px;
+  right: 8px;
+}
+
+.mobile-close-btn:hover .close-icon,
+.mobile-close-btn:focus .close-icon {
+  fill: var(--accent-color);
+}
+
+.close-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu {
+  position: absolute;
+  width: 100%;
+  max-width: 480px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  background: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  padding: 48px 40px;
+  transition: transform 500ms linear;
+}
+
+.li-studio {
+  margin-bottom: 32px;
+}
+
+.li-studio .link-studio {
+  display: flex;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.02em;
+}
+
+.li-portfolio {
+  margin-bottom: 35px;
+}
+
+.li-portfolio .link-portfolio {
+  display: flex;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.li-contacty {
+  margin-bottom: 302px;
+}
+
+.li-contacty .link-contacty {
+  display: flex;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.li-tel {
+  margin-bottom: 32px;
+}
+
+.li-tel .link-tel {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.li-mail {
+  margin-bottom: 64px;
+}
+
+.li-mail .link-mail {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(-50%) translateY(0%);
+}
+
+@media screen and (min-width: 768px) {
+  .icon-menu {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .navigation-list {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.menu-social {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-social-item {
+  display: flex;
+}
+
+.menu-social-item .menu-social-link {
+  display: block;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22222;
+  letter-spacing: 0.02em;
+  color: var(--akcent-color);
+}
+
+.vertical-line {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
 .aside {
   background: #f5f4fa;
   padding: 60px 0;
@@ -298,7 +449,7 @@ body {
 .nav-btn {
   background-color: transparent;
   padding: 0;
-  border: transparent;
+  border: none;
 }
 
 .nav-btn-icon {
@@ -306,12 +457,112 @@ body {
   height: 40px;
 }
 
-.list {
-  display: none;
+@media screen and (max-width: 767px) {
+  .list {
+    display: none;
+  }
 }
 
 .list-contakty {
   display: none;
+}
+
+.box-nav {
+  display: flex;
+  align-items: center;
+  /*Вирівнювання контейнерів по центру*/
+  background: var(--color-background--container);
+}
+
+.link-main {
+  text-decoration: none;
+  /* Отменяем подчеркивание у ссылки */
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-main:hover, .link-main:focus, .link-main:target {
+  color: var(--color-focus);
+}
+
+.link-main:active {
+  color: tomato;
+}
+
+.list .link-main {
+  display: block;
+  padding: 32px 0;
+}
+
+.nav-ul {
+  font-weight: 500;
+  /* Жирное начертание */
+  font-size: 14px;
+  line-height: 1.19;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+
+.nav-link {
+  position: relative;
+}
+
+.nav-link::after {
+  content: "";
+  position: absolute;
+  margin: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover::after, .nav-link:focus::after {
+  opacity: 1;
+}
+
+.list {
+  display: flex;
+}
+
+.list .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.list .current {
+  color: var(--akcent-color);
+}
+
+.link-mail {
+  display: block;
+}
+
+.icon-mail {
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+.icon-tel {
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+.list-contakty {
+  display: flex;
+  margin-left: auto;
+}
+
+.list-mail {
+  display: flex;
+  align-items: center;
+  margin-right: 50px;
+}
+
+.list-tel {
+  align-items: center;
 }
 
 .list-features {
@@ -332,54 +583,6 @@ body {
 
 .features {
   padding: 0;
-}
-
-.mobile-close-btn {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  top: 8px;
-  right: 8px;
-}
-
-.close-icon {
-  width: 19px;
-  height: 19px;
-}
-
-.mobile-menu {
-  position: absolute;
-  width: 100%;
-  max-width: 480px;
-  height: 100%;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(-100%);
-  background: #ffffff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-  padding: 48px 40px;
-  transition: transform 500ms linear;
-}
-
-.mobile-menu.is-open {
-  transform: translateX(-50%) translateY(0%);
-}
-
-@media screen and (min-width: 768px) {
-  .icon-menu {
-    display: none;
-  }
-  .mobile-menu {
-    display: none;
-  }
-  .navigation {
-    display: flex;
-    align-items: center;
-  }
-  .navigation-list {
-    display: flex;
-    align-items: center;
-  }
 }
 
 .title-post {
