--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -1,6 +1,8 @@
 .container-button {
-  width: 480px;
-  height: 320px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  height: 400px;
+  margin: 0 auto;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
