--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -101,12 +101,177 @@ body {
   height: 40px;
 }
 
+.box-nav {
+  display: flex;
+  align-items: center;
+  /*Вирівнювання контейнерів по центру*/
+  background: var(--color-background--container);
+}
+
+.link-main {
+  text-decoration: none;
+  /* Отменяем подчеркивание у ссылки */
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-main:hover, .link-main:focus, .link-main:target {
+  color: var(--color-focus);
+}
+
+.link-main:active {
+  color: tomato;
+}
+
+.list .link-main {
+  display: block;
+  padding: 32px 0;
+}
+
+.nav-ul {
+  font-weight: 500;
+  /* Жирное начертание */
+  font-size: 14px;
+  line-height: 1.19;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+
+.nav-link {
+  position: relative;
+}
+
+.nav-link::after {
+  content: "";
+  position: absolute;
+  margin: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover::after, .nav-link:focus::after {
+  opacity: 1;
+}
+
 .list {
-  display: none;
+  display: flex;
+}
+
+.list .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.list .current {
+  color: var(--akcent-color);
+}
+
+.link-mail {
+  display: block;
+}
+
+.icon-mail {
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+.icon-tel {
+  fill: currentColor;
+  margin-right: 10px;
 }
 
 .list-contakty {
-  display: none;
+  display: flex;
+  margin-left: auto;
+}
+
+.list-mail {
+  display: flex;
+  align-items: center;
+  margin-right: 50px;
+}
+
+.list-tel {
+  align-items: center;
+}
+
+.header-li a {
+  list-style-type: none;
+  background: var(--color-background--container);
+  color: var(--title-text-color);
+}
+
+.contakty a {
+  color: var(--primary-text-color);
+}
+
+.header-li {
+  list-style-type: none;
+  font-style: normal;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+  .list {
+    display: none;
+  }
+  .list-contakty {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .list-contakty {
+    display: flex;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .list-contakty {
+    flex-direction: column;
+  }
+  .list-mail {
+    margin-bottom: 10px;
+  }
+  .logo-link {
+    margin-right: 88px;
+    padding-top: 28px;
+    padding-bottom: 28px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list-contakty {
+    align-items: center;
+  }
+  .list-contakty .link-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding: 40px 0;
+    height: 16px;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .dark {
@@ -460,9 +625,12 @@ button.current {
   color: var(--color-focus);
 }
 
-.box-nav .logo-link {
-  padding-top: 16px;
-  padding-bottom: 16px;
+@media screen and (min-width: 1200px) {
+  .box-nav .logo-link {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-right: 93px;
+  }
 }
 
 .studio {
@@ -506,10 +674,5 @@ button.current {
 
 .social-list-link:hover, .social-list-link:focus {
   background-color: var(--color-focus);
-}
-
-.decor {
-  text-decoration: none;
-  list-style-type: none;
 }
 /*# sourceMappingURL=portfolio.css.map */
