--- a/sass/components/_logo-studio.scss
+++ b/sass/components/_logo-studio.scss
@@ -4,10 +4,13 @@
   letter-spacing: 0.03em;
   color: var(--color-focus);
 }
-.box-nav .logo-link {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  //margin-right: 93px;
+
+@media screen and (min-width: 1200px) {
+  .box-nav .logo-link {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-right: 93px;
+  }
 }
 
 .studio {
