--- a/sass/layaut/_list-features.scss
+++ b/sass/layaut/_list-features.scss
@@ -2,6 +2,19 @@
 //display: flex;
 //flex-wrap: wrap;
 //}
+@media screen and (min-width: 768px) {
+  .list-features-svg {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .list-features {
+    flex-basis: calc((100% - 15px * 4) / 2);
+    margin: 15px;
+  }
+}
 .list-features {
   flex-direction: column;
 }
