--- a/sass/layaut/_aside.scss
+++ b/sass/layaut/_aside.scss
@@ -13,6 +13,7 @@
 .container-item {
   display: flex;
   flex-wrap: wrap;
+  margin: -15px;
 
   .main-li {
     background: #ffffff;
@@ -20,7 +21,13 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     &:not(:last-child) {
-      margin-right: 30px;
+     // margin-right: 30px;
     }
+  }
+}
+@media screen and (min-width: 768px) {
+  .container-item .main-li {
+    margin: 15px;
+    width: calc((100% - 15px * 4) / 2);
   }
 }
