--- a/sass/layaut/_list-features.scss
+++ b/sass/layaut/_list-features.scss
@@ -23,7 +23,7 @@
 // }
 .features-icon {
   @extend %align;
-  width: 450px;
+  //width: 450px;
   height: 120px;
   background: #f5f4fa;
   margin-bottom: 30px;
