--- a/sass/layaut/_doing-section.scss
+++ b/sass/layaut/_doing-section.scss
@@ -8,7 +8,6 @@
   letter-spacing: 0.03em;
 }
 .doing-section {
-  display: none;
   padding-top: 0;
   padding-bottom: 94px;
 }
@@ -43,4 +42,9 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
+}
+@media screen and (max-width:1200px){
+  .doing-section {
+    display: none;
+  }
 }
