--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -69,7 +69,6 @@
 
 .container-button {
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
   padding: 200px 0;
   text-align: center;
@@ -79,6 +78,8 @@
   margin-bottom: 60px;
 }
 .container-button h1 {
+  margin-right: auto;
+  margin-left: auto;
   display: block;
   margin-bottom: 30px;
   font-size: 26px;
@@ -103,4 +104,20 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer; /* cursor */
+}
+@media screen and (min-width: 1200px) {
+  .container-button {
+    max-width: 1600px;
+    height: 600px;
+  }
+  .container-button h1 {
+    margin-bottom: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36364;
+    letter-spacing: 0.06em;
+    max-width: 696px;
+  }
 }
