--- a/sass/layaut/_container-footer.scss
+++ b/sass/layaut/_container-footer.scss
@@ -1,12 +1,18 @@
-.container-footer {
-  display: flex;
-  background: #2f303a;
-  padding: 60px 0;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  .social-list {
+@media screen and (max-width: 1200px) {
+  .container-footer {
+    display: flex;
+    background: #2f303a;
+    padding: 60px 0;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+
+    .social-list {
+      margin-bottom: 60px;
+    }
+  }
+  .footer-address {
     margin-bottom: 60px;
   }
 }
@@ -20,11 +26,7 @@
 .footer-icon {
   fill: var(--akcent-background);
 }
-// .flex {
-//   display: flex;
-//   align-items: baseline;
-//   justify-content: space-between;
-// }
+
 .footer-title {
   @include font($fw: 700, $fs: 14px, $lh: 1.143);
   margin-bottom: 20px;
@@ -32,9 +34,7 @@
   text-transform: uppercase;
   color: #ffffff;
 }
-// // .footer-box {
-// //   margin-left: 70px;
-// // }
+
 .logo-footer {
   display: block;
   padding: 0;
@@ -68,7 +68,6 @@
   color: var(--color-background--container);
 }
 .footer-address {
-  margin-bottom: 60px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 
@@ -116,5 +115,29 @@
     margin: 0 auto;
     display: flex;
     align-items: baseline;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container-footer {
+    padding: 60px 0;
+    background: #2f303a;
+  }
+   .wrap {
+     margin-right: 93px;
+   }
+  .logo-footer {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19231;
+    letter-spacing: 0.03em;
+  }
+ 
+  .flex {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+  .footer-box {
+    margin-left: 70px;
   }
 }
