--- a/sass/layaut/_container-form.scss
+++ b/sass/layaut/_container-form.scss
@@ -1,19 +1,20 @@
-.container-form {
-  //margin-left: 93px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+@media screen and (max-width: 1200px) {
+  .container-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
+  .box-mail {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
 }
 .footer-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-}
-.box-mail {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -59,6 +60,41 @@
   cursor: pointer;
 
   .footer-icon {
+    width: 24px;
+    height: 24px;
+    margin-left: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+   .container-form {
+    margin-left: auto;
+   }
+
+  .box-mail {
+    display: flex;
+  }
+
+  .contact-form-btn {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.88;
+    margin-left: 12px;
+    padding: 10px 29px;
+    width: 200px;
+    height: 50px;
+    background: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .contact-form-btn .footer-icon {
     width: 24px;
     height: 24px;
     margin-left: 10px;
