--- a/sass/layaut/_customers-section.scss
+++ b/sass/layaut/_customers-section.scss
@@ -1,8 +1,15 @@
-//.customers-section {
-  //padding: 94px 0;
-//}
+@media screen and (min-width: 1200px) {
+  .customers-section {
+    padding: 94px 0;
+  }
+  .customers-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.167;
+  }
+}
 .customers-title {
-  @include font($fs: 36px, $lh: 1.16);
+  @include font($fs: 28px, $lh: 1.179);
   //margin-bottom: 50px;
   margin-bottom: 30px;
   text-align: center;
@@ -68,5 +75,20 @@
   &:hover,
   &:focus {
     border-color: var(--color-focus);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers-section {
+    padding: 94px 0;
+  }
+  .customers-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.167;
+  }
+  .customers {
+    flex-basis: calc((100% - 15px * 12) / 6);
+    height: 90px;
+    margin: 15px;
   }
 }
