--- a/sass/layaut/_header.scss
+++ b/sass/layaut/_header.scss
@@ -32,9 +32,11 @@
   padding: 32px 0;
 }
 .nav-ul {
+  display: flex;
+  align-items: center;
   font-weight: 500; /* Жирное начертание */
-  font-size: 14px;
-  line-height: 1.19;
+  font-size: 12px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
 }
@@ -90,7 +92,7 @@
 .list-mail {
   display: flex;
   align-items: center;
-  margin-right: 50px;
+  //margin-right: 50px;
 }
 .list-tel {
   align-items: center;
@@ -134,6 +136,10 @@
     display: flex;
     margin-left: auto;
   }
+  .list {
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -156,12 +162,12 @@
   }
   .list-contakty .link-main {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    display: flex;
     padding: 40px 0;
     height: 16px;
     justify-content: center;
     align-items: center;
+  }
+  .contakty:not(:last-child) {
+    margin-right: 50px;
   }
 }
