--- a/sass/layaut/_list-features.scss
+++ b/sass/layaut/_list-features.scss
@@ -35,3 +35,12 @@
 .features {
   padding: 0;
 }
+@media screen and (min-width: 1200px) {
+  .features {
+    padding: 0;
+    margin-bottom: 94px;
+  }
+  .list-features {
+    flex-basis: calc((100% - 15px * 8) / 4);
+  }
+}
