--- a/css/main.css
+++ b/css/main.css
@@ -1056,6 +1056,14 @@ body {
   .footer-box {
     margin-left: 70px;
   }
+  .footer-address .text-p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    /* or 171% */
+    letter-spacing: 0.03em;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -1184,14 +1192,22 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 528px;
-  min-height: 581px;
+  width: 100vw;
+  height: 95vh;
+  max-height: 609px;
+  max-width: 450px;
   padding: 40px 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    overflow-y: scroll;
+  }
 }
 
 .modal-close-btn {
@@ -1231,7 +1247,7 @@ body {
 
 .contact-form-input {
   padding: 12px 42px;
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
@@ -1290,7 +1306,7 @@ body {
 .message {
   margin-bottom: 20px;
   resize: none;
-  width: 448px;
+  width: 100%;
   height: 120px;
   padding: 12px 16px;
 }
@@ -1311,8 +1327,8 @@ body {
 
 .checkbox-label {
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.171;
+  font-size: 12px;
+  line-height: 1.161;
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
@@ -1379,5 +1395,13 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-height: 581px;
+    width: 528px;
+    max-width: 528px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
