--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -387,6 +387,18 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .section-portfolio {
+    padding: 94px 0;
+  }
+  .items-button {
+    margin-bottom: 55px;
+  }
+  .list-portfolio .main-li {
+    width: calc((100% - 15px * 6) / 3);
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .container-footer {
     display: flex;
@@ -540,6 +552,14 @@ body {
   }
   .footer-box {
     margin-left: 70px;
+  }
+  .footer-address .text-p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    /* or 171% */
+    letter-spacing: 0.03em;
   }
 }
 
