--- a/sass/layaut/_modal-icon.scss
+++ b/sass/layaut/_modal-icon.scss
@@ -16,8 +16,10 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 528px;
-  min-height: 581px;
+  width: 100vw;
+  height: 95vh;
+  max-height: 609px;
+  max-width: 450px;
   padding: 40px 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -25,6 +27,11 @@
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 1199px) {
+  .modal {
+    overflow-y: scroll;
+  }
 }
 .modal-close-btn {
   position: absolute;
@@ -60,7 +67,7 @@
 }
 .contact-form-input {
   padding: 12px 42px;
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
@@ -114,7 +121,7 @@
 .message {
   margin-bottom: 20px;
   resize: none;
-  width: 448px;
+  width: 100%;
   height: 120px;
   padding: 12px 16px;
 
@@ -131,7 +138,7 @@
   letter-spacing: 0.01em;
 }
 .checkbox-label {
-  @include font($fw: normal, $fs: 14px, $lh: 1.171);
+  @include font($fw: normal, $fs: 12px, $lh: 1.161);
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
@@ -201,5 +208,12 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-height: 581px;
+    width: 528px;
+    max-width: 528px;
   }
 }
