--- a/sass/layaut/_mobile-menu.scss
+++ b/sass/layaut/_mobile-menu.scss
@@ -14,7 +14,7 @@
   height: 40px;
 }
 .mobile-menu {
-  position: absolute;
+  position: fixed;
   width: 100%;
   max-width: 480px;
   //height: 100vh;
