--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -40,7 +40,6 @@ body {
 .container {
   width: 100%;
   padding: 0 15px;
-  outline: 1px solid red;
 }
 
 .header .container {
@@ -88,6 +87,27 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.modal-submit {
+  display: block;
+  text-align: center;
+  align-items: center;
+}
+
+.main-li {
+  list-style-type: none;
+  font-style: normal;
+  margin-bottom: 30px;
+}
+
+.main-li .caption {
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .nav-btn {
@@ -276,6 +296,238 @@ body {
   }
   .contakty:not(:last-child) {
     margin-right: 50px;
+  }
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100vw;
+  height: 95vh;
+  max-height: 609px;
+  max-width: 450px;
+  padding: 40px 40px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    overflow-y: scroll;
+  }
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background: transparent;
+  cursor: pointer;
+}
+
+.icon-close {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  fill: #000000;
+  transform: translate(-50%, -50%);
+}
+
+.modal-close-btn:focus .icon-close,
+.modal-close-btn:hover .icon-close {
+  fill: var(--akcent-color);
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.box-modal {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form-input {
+  padding: 12px 42px;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.contact-form-input::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.contact-form-input:focus, .contact-form-input:hover {
+  outline: transparent;
+  border: 1px solid #2196f3;
+}
+
+.contact-form-input:hover ~ .form-icon,
+.contact-form-input:focus ~ .form-icon {
+  fill: #2196f3;
+}
+
+.title-contact-form {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  display: block;
+  margin-bottom: 30px;
+  font-style: normal;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.box-name {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  width: 18px;
+  height: 18px;
+}
+
+.modal-box-mail {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.box-tel {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.message {
+  margin-bottom: 20px;
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+}
+
+.message::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.label-style {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  text-align: left;
+  margin-bottom: 4px;
+  font-style: normal;
+  letter-spacing: 0.01em;
+}
+
+.checkbox-label {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.161;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  align-items: center;
+  font-style: normal;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.link-checkbox {
+  margin-left: 5px;
+  color: #2196f3;
+}
+
+.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.checkbox:checked + .checkbox-icon {
+  background-color: #2196f3;
+  background-image: url(../img/check.svg);
+  background-size: contain;
+  border-radius: 2px;
+  outline: none;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox:hover + .checkbox-icon,
+.checkbox:focus + .checkbox-icon {
+  border: 2px solid var(--akcent-color);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-icon {
+  margin-right: 7px;
+  width: 16px;
+  height: 15px;
+  display: inline-block;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  border-color: #212121;
+  border: 2px solid #212121;
+  cursor: pointer;
+}
+
+.modal-submit {
+  margin: 0 auto;
+  padding: 10px 55px;
+  width: 200px;
+  height: 50px;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.modal-submit:hover, .modal-submit:focus {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-height: 581px;
+    width: 528px;
+    max-width: 528px;
   }
 }
 
@@ -668,6 +920,150 @@ body {
     height: 24px;
     margin-left: 10px;
   }
+}
+
+.mobile-close-btn {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  top: 8px;
+  right: 8px;
+}
+
+.mobile-close-btn:hover .close-icon,
+.mobile-close-btn:focus .close-icon {
+  fill: var(--accent-color);
+}
+
+.close-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu {
+  position: fixed;
+  width: 100%;
+  max-width: 480px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  background: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  padding: 48px 40px;
+  transition: transform 500ms linear;
+}
+
+.li-studio {
+  margin-bottom: 32px;
+}
+
+.li-studio .link-studio {
+  display: flex;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.02em;
+}
+
+.li-portfolio {
+  margin-bottom: 35px;
+}
+
+.li-portfolio .link-portfolio {
+  display: flex;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.li-contacty {
+  margin-bottom: 302px;
+}
+
+.li-contacty .link-contacty {
+  display: flex;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.li-tel {
+  margin-bottom: 32px;
+}
+
+.li-tel .link-tel {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.li-mail {
+  margin-bottom: 64px;
+}
+
+.li-mail .link-mail {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(-50%) translateY(0%);
+}
+
+@media screen and (min-width: 768px) {
+  .icon-menu {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .navigation-list {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.menu-social {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-social-item {
+  display: flex;
+}
+
+.menu-social-item .menu-social-link {
+  display: block;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22222;
+  letter-spacing: 0.02em;
+  color: var(--akcent-color);
+}
+
+.vertical-line {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 button.btn {
