--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,21 @@ body {
   color: var(--title-text-color);
 }
 
+.main-li {
+  list-style-type: none;
+  font-style: normal;
+  margin-bottom: 30px;
+}
+
+.main-li .caption {
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
 .text-title {
   font-weight: bold;
   font-size: 16px;
@@ -209,7 +224,7 @@ body {
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/Desktop/optimision/Img-header@2x.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./img/Desktop/optimision/Img-header@2x.png");
   }
 }
 
