--- a/sass/components/_container-button.scss
+++ b/sass/components/_container-button.scss
@@ -63,7 +63,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("./img/Desktop/optimision/Img-header@2x.png");
+      url("../img/Mobile/optimision/Header img.png");
   }
 }
 
