--- a/sass/layaut/_mobile-menu.scss
+++ b/sass/layaut/_mobile-menu.scss
@@ -16,7 +16,7 @@
 .mobile-menu {
   position: fixed;
   width: 100%;
-  max-width: 480px;
+  height: 100%;
   //height: 100vh;
   top: 0;
   left: 50%;
