--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -943,7 +943,7 @@ body {
 .mobile-menu {
   position: fixed;
   width: 100%;
-  max-width: 480px;
+  height: 100%;
   top: 0;
   left: 50%;
   transform: translateX(-50%) translateY(-100%);
